--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 lib_deps =
+  DHT sensor library
   https://github.com/marvinroger/homie-esp8266.git
   ArduinoJson
   AsyncMqttClient
